# Adjacent

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test.py
adjacent_python_tests/: angle.py  angle_annotation.py  calc_data.py  circle.py  circle_ex.py  core_utils.py  length_constraint.py  pentagon_01.py  pentagon_02.py  random_lines.py  random_lines_orthogonal.py  read_json_log.py  rectangle_01.py  single_triangle.py  test.py  triangle_01.py  triangle_02.py  triangle_03.py  utils.py
data/pentagon/: 2022-11-23T1933.json
data/pentagon/01/: 2023-01-04T1506.json  2023-01-04T1511.json  2023-01-04T1520.json  2023-01-04T1545.json  2023-01-04T1627.json  2023-01-04T1637.json  2023-01-04T1648.json  2023-01-17T1658.json  2023-01-17T1700.json  2023-01-17T1703.json  2023-01-17T1726.json  2023-01-17T1729.json  2023-01-17T1733.json  2023-01-19T1230.json  2023-01-19T1239.json  2023-01-19T1242.json  2023-01-19T1246.json  (+15 more)
data/random/: 2022-11-02T1219.json  2022-11-02T1221.json  2022-11-02T1235.json  2022-11-02T1238.json  2022-11-02T1240.json  2022-11-02T1243.json  2022-11-02T1442.json  2022-11-02T1449.json  2022-11-02T1453.json  2022-11-02T1459.json  2022-11-02T1515.json  2022-11-02T1539.json  2022-11-02T1543.json  2022-11-02T1547.json
data/rectangle/: 2022-11-23T2029.json  2022-11-23T2044.json  2022-11-23T2123.json
include/: constraint.hpp  entity.hpp  equation_system.hpp  expression.hpp  expression_vector.hpp
src/: equation_system.cpp  expression.cpp  expression_vector.cpp  js_interface.cpp  py_interface.cpp  test.cpp
web/: compile.sh  index.html
(+14060 files in other folders)
